// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination demo -- pageSize 1`] = `
.c1 {
  vertical-align: baseline;
}

.c4 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c2 .c3 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c2 .c3:hover {
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                20 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                20 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- pageSizeOptions 1`] = `
.c1 {
  vertical-align: baseline;
}

.c4 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c2 .c3 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c2 .c3:hover {
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                10 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                10 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- pagination 1`] = `
.c12 {
  vertical-align: baseline;
}

.c29 {
  position: relative;
}

.c31 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c26 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  box-shadow: 0 2px 4px 0 #e4e5f2,0 1px 1px 0 rgba(162,166,191,0.32),0 1px 0 0 rgba(223,224,241,0.7);
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c24 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #dfe0f1;
  padding-right: 22px;
  border-right-width: 0;
}

.c24 .c30 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c24 .c30::-webkit-input-placeholder {
  color: #abb4c3;
}

.c24 .c30::-moz-placeholder {
  color: #abb4c3;
}

.c24 .c30:-ms-input-placeholder {
  color: #abb4c3;
}

.c24 .c30::placeholder {
  color: #abb4c3;
}

.c24:hover {
  border-color: #c3cad9;
}

.c24 .c28 {
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  background: #fafafc;
}

.c24 .c28:hover {
  background: #f6f6fb;
}

.c24 .c30 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c24 .c25,
.c24 .c27 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c24 .c25:hover,
.c24 .c27:hover {
  color: #3555f6;
}

.c24 .c25 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c24 .c27 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #e8e9f5;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #3555f6;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c34 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c34:last-child {
  margin-right: 0;
}

.c7 .c35+.c35 {
  margin-left: -1px;
}

.c7 .c33 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c33:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c33:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c32 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c32 .uc-fe-pagination-item,
.c32 .uc-fe-pagination-prev,
.c32 .uc-fe-pagination-next,
.c32 .uc-fe-pagination-jump-prev,
.c32 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c32 .uc-fe-pagination-item,
.c32 .uc-fe-pagination-prev,
.c32 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c32 .uc-fe-pagination-item:hover,
.c32 .uc-fe-pagination-prev:hover,
.c32 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c32 .uc-fe-pagination-jump-prev:hover,
.c32 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c32 .uc-fe-pagination-item-active,
.c32 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c32 .uc-fe-pagination-disabled,
.c32 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c32 .uc-fe-pagination-prev-icon,
.c32 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c32 .uc-fe-pagination-options,
.c32 .uc-fe-pagination-options-size-changer,
.c32 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c32 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c32 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #4683e6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        showTitle
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        showQuickJumper
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        goButton
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        showSizeChanger
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        showPrevNextJumpers
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        simple
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        total
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c24"
        >
          <div>
            <span
              class="c25 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c26"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c12"
                type="caret-up"
              />
            </span>
            <span
              class="c27 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c26"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c12"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="c28 uc-fe-numberinput-input-wrap c29"
          >
            <input
              autocomplete="off"
              class="c30 uc-fe-numberinput-input c31"
              min="-9007199254740991"
              step="1"
              value="100"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c32"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c12"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c12"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showLessItems 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 3 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showPrevNextJumpers 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showQuickJumper 1`] = `
.c1 {
  vertical-align: baseline;
}

.c4 {
  position: relative;
}

.c6 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c8 {
  color: #c3cad9;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.c10 .c5 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c10 .c5::-webkit-input-placeholder {
  color: #abb4c3;
}

.c10 .c5::-moz-placeholder {
  color: #abb4c3;
}

.c10 .c5:-ms-input-placeholder {
  color: #abb4c3;
}

.c10 .c5::placeholder {
  color: #abb4c3;
}

.c10 .c3 {
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  background: #fafafc;
}

.c10 .c3:hover {
  background: #f6f6fb;
}

.c10 .c5 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c2 .c5 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c2 .c5::-webkit-input-placeholder {
  color: #abb4c3;
}

.c2 .c5::-moz-placeholder {
  color: #abb4c3;
}

.c2 .c5:-ms-input-placeholder {
  color: #abb4c3;
}

.c2 .c5::placeholder {
  color: #abb4c3;
}

.c2 .c5 {
  text-align: center;
  border: 1px solid #dfe0f1;
  margin: 0 4px;
  height: 26px;
  width: 26px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  background: #fafafc;
}

.c2 .c5:hover {
  z-index: 1;
  background: #f6f6fb;
  border-color: #c3cad9;
}

.c2 .c11,
.c2 .c12 {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
  border-color: transparent;
}

.c2 .c11:hover,
.c2 .c12:hover {
  color: #3555f6;
  z-index: 1;
}

.c2 .c11 {
  right: 0;
  border-width: 1px;
}

.c2 .c12 {
  left: 0;
  border-width: 1px;
}

.c2 .c7 {
  margin-left: 0;
}

.c2 .c5 {
  margin: 0;
}

.c2 .c7 {
  margin-left: 4px;
  margin-right: 0px;
}

.c9 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  border-color: #4683e6;
  border: none;
  background: linear-gradient(135deg,#5c8af7,#385ef5);
  box-shadow: 0 1px 5px 0 rgba(21,56,195,.12),0 2px 2px 0 rgba(8,155,140,0.24),0 3px 1px -3px rgba(58,96,245,.34);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c9:hover {
  color: #fff;
  border-color: #3664c8;
  background: linear-gradient(135deg,#5e95fb,#3a72f9);
  box-shadow: 0 1px 10px 0 rgba(21,56,195,.12),0 2px 4px -1px rgba(21,56,195,.2),0 4px 5px 0 rgba(21,56,195,.14);
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-quick-jumper"
        >
          <div
            class="uc-fe-numberinput uc-fe-numberinput-styletype-pagination c2"
          >
            <div
              class="c3 uc-fe-numberinput-input-wrap c4"
            >
              <input
                autocomplete="off"
                class="c5 uc-fe-numberinput-input c6"
                max="10"
                min="1"
                step="1"
                value=""
              />
              <span
                class="c7 uc-fe-numberinput-suffix c8"
              >
                <span
                  class="uc-fe-pagination-options-quick-jumper-text"
                >
                  /10
                </span>
              </span>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-quick-jumper"
        >
          <div
            class="uc-fe-numberinput uc-fe-numberinput-styletype-pagination c2"
          >
            <div
              class="c3 uc-fe-numberinput-input-wrap c4"
            >
              <input
                autocomplete="off"
                class="c5 uc-fe-numberinput-input c6"
                max="10"
                min="1"
                step="1"
                value=""
              />
              <span
                class="c7 uc-fe-numberinput-suffix c8"
              >
                <span
                  class="uc-fe-pagination-options-quick-jumper-text"
                >
                  /10
                </span>
              </span>
            </div>
          </div>
          <button
            class="uc-fe-pagination-options-gobutton uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c9"
            type="button"
          >
            确定
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showSizeChanger 1`] = `
.c1 {
  vertical-align: baseline;
}

.c4 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c2 .c3 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c2 .c3:hover {
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                10 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showTitle 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- simple 1`] = `
.c1 {
  vertical-align: baseline;
}

.c8 {
  position: relative;
}

.c10 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c12 {
  color: #c3cad9;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  box-shadow: 0 2px 4px 0 #e4e5f2,0 1px 1px 0 rgba(162,166,191,0.32),0 1px 0 0 rgba(223,224,241,0.7);
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c6 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  box-shadow: 0 2px 4px 0 #e4e5f2,0 1px 1px 0 rgba(162,166,191,0.32),0 1px 0 0 rgba(223,224,241,0.7);
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
  cursor: not-allowed;
  pointer-events: none;
  color: #bbb;
}

.c13 .c9 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c13 .c9::-webkit-input-placeholder {
  color: #abb4c3;
}

.c13 .c9::-moz-placeholder {
  color: #abb4c3;
}

.c13 .c9:-ms-input-placeholder {
  color: #abb4c3;
}

.c13 .c9::placeholder {
  color: #abb4c3;
}

.c13 .c7 {
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  background: #fafafc;
}

.c13 .c7:hover {
  background: #f6f6fb;
}

.c13 .c9 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c13 .c3,
.c13 .c5 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c13 .c3:hover,
.c13 .c5:hover {
  color: #3555f6;
}

.c13 .c3 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c13 .c5 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #e8e9f5;
}

.c14 .c9 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c14 .c9::-webkit-input-placeholder {
  color: #abb4c3;
}

.c14 .c9::-moz-placeholder {
  color: #abb4c3;
}

.c14 .c9:-ms-input-placeholder {
  color: #abb4c3;
}

.c14 .c9::placeholder {
  color: #abb4c3;
}

.c14 .c9 {
  text-align: center;
  border: 1px solid #dfe0f1;
  margin: 0 4px;
  height: 26px;
  width: 26px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  background: #fafafc;
}

.c14 .c9:hover {
  z-index: 1;
  background: #f6f6fb;
  border-color: #c3cad9;
}

.c14 .c3,
.c14 .c5 {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
  border-color: transparent;
}

.c14 .c3:hover,
.c14 .c5:hover {
  color: #3555f6;
  z-index: 1;
}

.c14 .c3 {
  right: 0;
  border-width: 1px;
}

.c14 .c5 {
  left: 0;
  border-width: 1px;
}

.c14 .c11 {
  margin-left: 0;
}

.c14 .c9 {
  margin: 0;
}

.c14 .c11 {
  margin-left: 4px;
  margin-right: 0px;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  padding: 0 28px;
}

.c2 .c9 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c2 .c9::-webkit-input-placeholder {
  color: #abb4c3;
}

.c2 .c9::-moz-placeholder {
  color: #abb4c3;
}

.c2 .c9:-ms-input-placeholder {
  color: #abb4c3;
}

.c2 .c9::placeholder {
  color: #abb4c3;
}

.c2 .c9 {
  text-align: center;
  border: 1px solid #dfe0f1;
  margin: 0 4px;
  height: 26px;
  width: 26px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  background: #fafafc;
}

.c2 .c9:hover {
  z-index: 1;
  background: #f6f6fb;
  border-color: #c3cad9;
}

.c2 .c3,
.c2 .c5 {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
  border-color: transparent;
}

.c2 .c3:hover,
.c2 .c5:hover {
  color: #3555f6;
  z-index: 1;
}

.c2 .c3 {
  right: 0;
  border-width: 1px;
}

.c2 .c5 {
  left: 0;
  border-width: 1px;
}

.c2 .c11 {
  margin-left: 0;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md uc-fe-pagination-simple"
      unselectable="unselectable"
    >
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-pagination c2"
      >
        <div>
          <span
            class="c3 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c4"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__right c1"
              type="right"
            />
          </span>
          <span
            class="c5 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c6"
            disabled=""
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__left c1"
              type="left"
            />
          </span>
        </div>
        <div
          class="c7 uc-fe-numberinput-input-wrap c8"
        >
          <input
            autocomplete="off"
            class="c9 uc-fe-numberinput-input c10"
            max="10"
            min="1"
            step="1"
            value="1"
          />
          <span
            class="c11 uc-fe-numberinput-suffix c12"
          >
            <span
              class="uc-fe-pagination-quick-jumper-text"
            >
              /10
            </span>
          </span>
        </div>
      </div>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- size 1`] = `
.c1 {
  vertical-align: baseline;
}

.c2 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c2 .uc-fe-pagination-item,
.c2 .uc-fe-pagination-prev,
.c2 .uc-fe-pagination-next,
.c2 .uc-fe-pagination-jump-prev,
.c2 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c2 .uc-fe-pagination-item,
.c2 .uc-fe-pagination-prev,
.c2 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c2 .uc-fe-pagination-item:hover,
.c2 .uc-fe-pagination-prev:hover,
.c2 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c2 .uc-fe-pagination-jump-prev:hover,
.c2 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c2 .uc-fe-pagination-item-active,
.c2 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c2 .uc-fe-pagination-disabled,
.c2 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c2 .uc-fe-pagination-prev-icon,
.c2 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c2 .uc-fe-pagination-options,
.c2 .uc-fe-pagination-options-size-changer,
.c2 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c2 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c2 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 22px;
  height: 22px;
  line-height: 20px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c3 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c3 .uc-fe-pagination-item,
.c3 .uc-fe-pagination-prev,
.c3 .uc-fe-pagination-next,
.c3 .uc-fe-pagination-jump-prev,
.c3 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 32px;
  height: 32px;
  line-height: 30px;
}

.c3 .uc-fe-pagination-item,
.c3 .uc-fe-pagination-prev,
.c3 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c3 .uc-fe-pagination-item:hover,
.c3 .uc-fe-pagination-prev:hover,
.c3 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c3 .uc-fe-pagination-jump-prev:hover,
.c3 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c3 .uc-fe-pagination-item-active,
.c3 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c3 .uc-fe-pagination-disabled,
.c3 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c3 .uc-fe-pagination-prev-icon,
.c3 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c3 .uc-fe-pagination-options,
.c3 .uc-fe-pagination-options-size-changer,
.c3 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c3 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c3 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-sm c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c2"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-lg c3"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- total 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- uncontrolled 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #3555f6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #3555f6;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #3555f6;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;
